# stellAI

./: CMakeLists.txt  README.md
docs/: setup.md
include/: StellAI.hpp  StellAI_GUI.hpp  StellAI_integration.h  gui.h
include/core/: globals.h
include/entities/: 3DObjects.h  Camera.h  Object3D.h  SceneObject.h
include/graphics/: background.h  lightshading.h  rendering.h
include/gui/: actions.h  gui.h
include/resources/: ModelLoad.h  ObjectManager.h
src/core/: StellAI.cpp  StellAI_integration.cpp  background.c  globals.c  imgui_bridge.cpp  main.c
src/entities/: 3DObjects.c
src/graphics/: background.c  camera.c  lightshading.c  rendering.c  shaders.c
src/gui/: actions.c  gui.c
src/resources/: ModelLoad.c  ObjectManager.c  loading.c  materials.c  resource_loader.c  textures.c
src/utils/: StellAI_GUI.cpp  Vectors.c  file_operations.c  gui.c
